Fixed images overlapping navebar and added hover overlay

--- a/The-Pet-Shop-Website/css/style.css
+++ b/The-Pet-Shop-Website/css/style.css
@@ -4,32 +4,36 @@
 /*Import link for the Mukta font from fonts.google.com*/
 @import url('https://fonts.googleapis.com/css2?family=Mukta&display=swap');
 
-body{
+body {
     background-color: white;
-    overflow-x: hidden; /*Hides the bottom left right scroll bar when elements stretch beyond the screen border*/
+    overflow-x: hidden;
+    /*Hides the bottom left right scroll bar when elements stretch beyond the screen border*/
 }
 
 /*NAVBAR*/
 
-li{
+li {
     display: inline;
     padding: 5px;
 }
 
-a{
-    font-family: "Roboto", sans-serif; /*Font from fonts.google.com*/
+a {
+    font-family: "Roboto", sans-serif;
+    /*Font from fonts.google.com*/
     font-size: 20px;
     font-weight: 700;
     text-shadow: 1px .5px 4px rgba(46, 31, 31, 0.5);
     color: white;
-    text-decoration: none; /*Removes the default link styling*/
+    text-decoration: none;
+    /*Removes the default link styling*/
 }
 
-a:hover{
-    color: #d7eaf7; /*Changes the color of the ancor element when a user hovers their mouse over it*/
+a:hover {
+    color: #d7eaf7;
+    /*Changes the color of the ancor element when a user hovers their mouse over it*/
 }
 
-.nav-bar{
+.nav-bar {
     background-color: #216391;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -37,58 +41,70 @@ a:hover{
     margin-top: -8px;
     margin-left: -10px;
     margin-right: -10px;
-    position: sticky; /*Creates a sticky element that stays in the same spot in the browser screen*/
-    top: 0; /*Tells the browser to stick the element at the top of the page based on user scrolling*/
+    position: sticky;
+    /*Creates a sticky element that stays in the same spot in the browser screen*/
+    top: 0;
+    /*Tells the browser to stick the element at the top of the page based on user scrolling*/
+    z-index: 9;
+    /*Sets the stack layer of the navbar to scroll over all elements*/
 }
 
 /*Creats a line under the Home and Contact links to separate them from the images links*/
-#nav-border{
+#nav-border {
     padding-bottom: 10px;
     border-bottom: 3px solid#ffffff;
 }
 
 /*HEADERS*/
-h1, h2, h3{
+h1,
+h2,
+h3 {
     color: #0a3f63;
     text-align: center;
-    font-family: "Mukta", sans-serif; /*Font from fonts.google.com*/
+    font-family: "Mukta", sans-serif;
+    /*Font from fonts.google.com*/
     text-shadow: 1px .5px 4px rgba(0, 0, 0, 0.5);
     margin: 0px;
 }
 
-h1{
+h1 {
     font-size: 60px;
     margin-top: 50px;
 }
 
-h2{
+h2 {
     font-size: 45px;
     margin-bottom: 20px;
 }
 
-h3{
+h3 {
     font-size: 30px;
     margin-top: 20px;
 }
 
-#contact-h3{
+#contact-h3 {
     text-shadow: none;
 }
 
 /*Creats a text color change animation on the h1 tags for the home and contact page headers*/
-@keyframes color-text{
-    0%{color: #b5e1ff;}
-    100%{color: #0a3f63;}
+@keyframes color-text {
+    0% {
+        color: #b5e1ff;
+    }
+
+    100% {
+        color: #0a3f63;
+    }
 }
 
 /*Calls the animation by it's name in a CSS selector so it can be applied to a specific HTML element*/
-.animate-text{
+.animate-text {
     animation: color-text 4s;
 }
 
 /*BODY CONTENT*/
 
-img{
+img {
     width: 500px;
     height: 350px;
     border-radius: 10px;
@@ -96,31 +112,78 @@ img{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 19);
 }
 
-.column{
+.column {
     float: left;
-    width: 48%; /*Places the images side by side when the float property is used*/
+    width: 48%;
+    /*Places the images side by side when the float property is used*/
     padding: 10px;
 }
 
 /*Groups elements inside a div element together and forces any floating elements outside of the div under it with this class selector*/
-.container{
+.container {
     background-size: 100% !important;
     margin: 0px -60px 50px -40px;
-    padding-top: 5px; /*Padding will add  an inline space so the elements don't sit on the edge of the div*/
+    padding-top: 5px;
+    /*Padding will add  an inline space so the elements don't sit on the edge of the div*/
     padding-bottom: 10px;
 }
 
 /*This is part of the .container class selector to format the elements to display in a table like format*/
-.container::after{
+.container::after {
     content: "";
     clear: both;
     display: table;
 }
 
 /*Sets up the size of each div that holds an image so the image can be centered*/
-.image-container{
+.image-container {
     position: relative;
     width: 500px;
     margin: auto;
     margin-bottom: 50px;
+}
+
+/*Sets the background color in each div with an image and specifies which ones by the use of the id names for each image*/
+#cat{
+    background-color: #d7eaf7;
+}
+
+#dog{
+    background-color: #c3e0c5;
+}
+
+#rabbit{
+    background-color: #c3e0c5;
+}
+
+#guineapig{
+    background-color: #d7eaf7;
+}
+
+#fish{
+    background-color: #d7eaf7;
+}
+
+#reptile{
+    background-color: #c3e0c5;
+}
+
+/*Sets up the properties for the overlay on each image*/
+.overlay{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 500px;
+    height: 350px;
+    margin-top: 50px;
+    border-radius: 10px;
+    background-color: rgb(0, 0, 0);
+    opacity: 0;
+}
+
+/*The :hover pseudo-classtriggers the overlay class to 60% opacity when a user hovers their mouse over an image*/
+.overlay:hover{
+    opacity: 0.6;
 }
